--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
   <!-- LIJEVO -->
   <div class="col-md-6 left">
     <img
-      src="http://localhost/Zadaci(FromBeginning)/assets/img/6.jpeg"
+      src="http://localhost/Zadaci(FromBeginning)/assets/img/pozadina.jpeg"
       class="img-fluid"
       alt="Responsive image"
     />
