--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,21 @@ a {
   height: 150px;
 }
 
+.avatar {
+  width: 200px;
+  height: 200px;
+  padding: 5px;
+  margin: 30px 0;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+.avatar-link {
+  opacity: 0.7;
+}
+.avatar-link:hover {
+  opacity: 1;
+}
+
 .container-big-postavke {
   width: 700px;
   margin: 0 auto;
