--- a/templates/user.html
+++ b/templates/user.html
@@ -75,20 +75,20 @@
         <div class="form-group">
           <p><span>Email:</span> {{info.email}}</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="info.tel != null">
           <p><span>Telefon:</span> {{info.tel}}</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="info.bio != null">
           <p><span>Biografija:</span></p>
           <p>{{info.bio}}</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="info.prebivaliste != null">
           <p><span>Prebivalište:</span> {{info.prebivaliste}}</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="info.datum_rodenja != null">
           <p><span>Datum rođenja:</span> {{info.datum_rodenja}}</p>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="info.spol != null">
           <p><span>Spol:</span> {{info.spol}}</p>
         </div>
       </form>
