--- a/css/style.css
+++ b/css/style.css
@@ -286,15 +286,21 @@ a {
   width: 200px;
   height: 200px;
   padding: 5px;
-  margin: 30px 0;
+  margin-bottom: 20px;
   border: 2px solid black;
   border-radius: 10px;
 }
+/*
 .avatar-link {
   opacity: 0.7;
 }
 .avatar-link:hover {
   opacity: 1;
+}
+*/
+
+.isipisOdabranogAvatara {
+  margin-top: 10px;
 }
 
 .container-big-postavke {
