--- a/templates/kreirani_zadaci.html
+++ b/templates/kreirani_zadaci.html
@@ -26,6 +26,9 @@
         ><span class="sr-only">(current)</span>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#!dovrseni_zadaci">Dovršeni zadaci</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#!kalendar">Kalendar</a>
       </li>
     </ul>
