--- a/templates/pregled_zadatka.html
+++ b/templates/pregled_zadatka.html
@@ -25,6 +25,9 @@
         <a class="nav-link" href="#!kreirani_zadaci">Kreirani zadaci</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#!dovrseni_zadaci">Dovršeni zadaci</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#!kalendar">Kalendar</a>
       </li>
     </ul>
